# SimpleCppGame

./: .gitignore  CMakeLists.txt  README.md  license.txt
cmake/: CreatePythonVenv.cmake  FindSphinx.cmake  SFMLGameDevelopmentLicense.txt
dependencies/: CMakeLists.txt
dependencies/jupiter-engine/: CMakeLists.txt
docs/: .buildinfo  CMakeLists.txt  Doxyfile  Doxyfile.in  classdocs.html  classdocs.rst  conf.py  extending.html  extending.rst  genindex.html  index.html  index.rst  installation.html  installation.rst  lifecycle.html  objects.inv  search.html  searchindex.js
docs/.doctrees/: classdocs.doctree  environment.pickle  extending.doctree  index.doctree  installation.doctree  lifecycle.doctree
docs/_sources/: installation.rst.txt
docs/doxygen/html/: BallSystem_8hpp_source.html  ComponentFamily_8hpp_source.html  Components_8hpp_source.html  Dispatcher_8hpp_source.html  EnemyAISystem_8hpp_source.html  EntityEngine_8hpp_source.html  EntityFamily_8hpp_source.html  EntitySystem_8hpp_source.html  Entity_8hpp_source.html  Event_8hpp_source.html  GameOverScreen_8hpp_source.html  GameScreen_8hpp_source.html  Game_8hpp_source.html  IteratingSystem_8hpp_source.html  LambdaStates_8hpp_source.html  MainMenuScreen_8hpp_source.html  MenuScreen_8hpp_source.html  Menu_8hpp_source.html  PlayerInputSystem_8hpp_source.html  RenderSystem_8hpp_source.html  Screen_8hpp_source.html  SplashScreen_8hpp_source.html  StateMachine_8hpp_source.html  VelocitySystem_8hpp_source.html  annotated.html  classBallComponent-members.html  classBallComponent.html  classBallComponent__coll__graph.map  classBallComponent__coll__graph.md5  classBallSystem-members.html  classBallSystem.html  classBallSystem__inherit__graph.map  classBallSystem__inherit__graph.md5  classComponentFamily-members.html  classComponentFamily.html  classComponentFamily__inherit__graph.map  classComponentFamily__inherit__graph.md5  classDispatcher-members.html  classDispatcher.html  classEnemyAISystem-members.html  (+151 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  (+27 more)
docs/doxygen/latex/: annotated.tex  classBallComponent.tex  classBallComponent__coll__graph.md5  classBallSystem.tex  classBallSystem__coll__graph.md5  classComponentFamily.tex  classComponentFamily__coll__graph.md5  classDispatcher.tex  classEnemyAISystem.tex  classEnemyAISystem__inherit__graph.md5  classEnemyComponent.tex  classEnemyComponent__inherit__graph.md5  classEntity.tex  classEntityEngine.tex  classEntityFamily.tex  classEntityFamily__inherit__graph.md5  classEntitySystem.tex  classEntitySystem__inherit__graph.md5  classEntity_1_1Component.tex  classEntity_1_1Component__inherit__graph.md5  classEvent.tex  classGame.tex  classGameOverScreen.tex  classGameOverScreen__inherit__graph.md5  classGameScreen.tex  classGameScreen__coll__graph.md5  classIteratingSystem.tex  classIteratingSystem__coll__graph.md5  classIteratingSystem__inherit__graph.md5  classLambdaState.tex  classLambdaState__coll__graph.md5  classLambdaTransition.tex  classLambdaTransition__inherit__graph.md5  classLocationComponent.tex  classLocationComponent__inherit__graph.md5  classMainMenuScreen.tex  classMainMenuScreen__coll__graph.md5  classMenu.tex  classMenuScreen.tex  classMenuScreen__inherit__graph.md5  (+24 more)
docs/doxygen/xml/: BallSystem_8hpp.xml  ComponentFamily_8hpp.xml  Components_8hpp.xml  Dispatcher_8hpp.xml  EnemyAISystem_8hpp.xml  EntityEngine_8hpp.xml  EntityFamily_8hpp.xml  EntitySystem_8hpp.xml  Entity_8hpp.xml  Event_8hpp.xml  GameOverScreen_8hpp.xml  GameScreen_8hpp.xml  Game_8hpp.xml  IteratingSystem_8hpp.xml  LambdaStates_8hpp.xml  MainMenuScreen_8hpp.xml  MenuScreen_8hpp.xml  Menu_8hpp.xml  PlayerInputSystem_8hpp.xml  RenderSystem_8hpp.xml  Screen_8hpp.xml  SplashScreen_8hpp.xml  StateMachine_8hpp.xml  VelocitySystem_8hpp.xml  classBallComponent.xml  classBallSystem.xml  classComponentFamily.xml  classDispatcher.xml  classEnemyAISystem.xml  classEnemyComponent.xml  classEntity.xml  classEntityEngine.xml  classEntityFamily.xml  classEntitySystem.xml  classEntity_1_1Component.xml  classEvent.xml  classGame.xml  classGameOverScreen.xml  classGameScreen.xml  classGame_1_1InitializationCompleteEvent.xml  (+29 more)
docs/sphinx-in/: classdocs.rst  conf.py  extending.rst  index.rst  installation.rst  lifecycle.rst
docs/usage/: installation.rst
include/: Dispatcher.hpp  Event.hpp  Game.h  Game.hpp  GameOverScreen.hpp  GameScreen.hpp  MainMenuScreen.hpp  Menu.hpp  MenuScreen.hpp  Screen.h  Screen.hpp  SplashScreen.hpp
include/entity/: BallSystem.hpp  ComponentFamily.hpp  Components.hpp  EnemyAISystem.hpp  Entity.hpp  EntityEngine.hpp  EntityFamily.hpp  EntitySystem.hpp  IteratingSystem.hpp  PlayerInputSystem.hpp  RenderSystem.hpp  VelocitySystem.hpp
src/: CMakeLists.txt  dispatcher.cpp  event.cpp  game-over-screen.cpp  game-screen.cpp  game.cpp  gamescreen.cpp  main-menu-screen.cpp  main.cpp  mainmenuscreen.cpp  menu-screen.cpp  menu.cpp  screen.cpp  splash-screen.cpp  splashscreen.cpp
src/entity/: ball-system.cpp  component-family.cpp  components.cpp  enemy-ai-system.cpp  entity-engine.cpp  entity-system.cpp  entity.cpp  iterating-system.cpp  player-input-system.cpp  render-system.cpp  velocity-system.cpp
